--- a/allfiles/main.html
+++ b/allfiles/main.html
@@ -10,9 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles\main.css" />
-    <link rel="stylesheet" href="styles\header.css" />
-    <link rel="stylesheet" href="styles\footer.css" />
+    <link rel="stylesheet" href="STYLES/footer.css"/>
+    <link rel="stylesheet" href="STYLES/header.css" />
+    <link rel="stylesheet" href="STYLES/main.css" />
   </head>
   <body>
     <div class="header">
@@ -57,7 +57,7 @@
           </h4>
         </div>
         <div>
-          <a class="bmi" href="sub-html/bmi.html">
+          <a class="bmi" href="bmi.html">
             <img class="bmi-img" src="images/bmi.jpeg" alt="BMI" />
             <p>CALCULATE UR BMI HERE</p>
             CLICK ON IT
@@ -100,11 +100,11 @@
       <div class="div-4">
         <h2 style="margin-left: 40%;">Equipment sharing</h2>
         <div class="sub-div4">
-          <a href="sub-html/share.html">
+          <a href="share.html">
             <img class="share"src="images/share.png" alt="share">
             <H4 style="text-decoration: none;"CLASS="div4-names">SHARE</H4>
           </a>
-          <a href="sub-html/equipment.html">
+          <a href="equipment.html">
             <img class="eqip"src="images/eqip shrae.jpeg" alt="equip">
             <H4 class="div4-names">
               REQUEST
