--- a/allfiles/bmi.html
+++ b/allfiles/bmi.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BMI Calculator</title>
-    <link rel="stylesheet" href="styles\main.css" />
-    <link rel="stylesheet" href="styles\header.css" />
-    <link rel="stylesheet" href="styles\footer.css" />
+    <link rel="stylesheet" href="STYLES\main.css" />
+    <link rel="stylesheet" href="STYLES\header.css" />
+    <link rel="stylesheet" href="STYLES/footer.css" />
     <style>
       body {
         font-family: Arial, sans-serif;
