--- a/allfiles/equipment.html
+++ b/allfiles/equipment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fit Kiing - Equipment Sharing</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="STYLES/use.css" />
     <style>
       .header {
         position: fixed;
@@ -65,7 +65,6 @@
         text-decoration: underline;
       }
     </style>
-    <link rel="stylesheet" href="sub-stles/use.css" />
   </head>
   <body>
     <div class="header">
